added nav and first section

--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -1,1 +1,85 @@
+.main-info
+  min-height: 800px
+  background: url(../img/main_bg.jpg) center center / cover no-repeat
 
+.logo
+  padding: 0 30px
+  &__img
+    margin-top: 20px
+  &__txt
+    margin-top: 5px
+    font-style: normal
+    font-weight: 100
+    font-size: 13px
+    color: #FFFFFF
+  &__tel
+    display: flex
+    margin-top: 20px
+  &__wrapper
+    display: flex
+    flex-direction: column
+    padding: 0px 15px
+    font-style: normal
+    font-weight: 300
+    font-size: 12px
+    text-align: right
+    color: #FFFFFF
+  &__phone
+    font-style: normal
+    font-weight: 400
+    font-size: 22px
+    text-align: center
+    text-transform: uppercase
+    color: #FFFFFF
+  &__button
+    width: 172px
+    height: 46px
+    background: linear-gradient(0deg, #1EACC7 0%, #4CE2FF 100%)
+    box-shadow: inset 0px -3px 0px rgba(0, 0, 0, 0.12)
+    border-radius: 4px
+    font-style: normal
+    font-weight: 400
+    font-size: 14px
+    align-items: center
+    text-align: center
+    text-transform: uppercase
+    color: #FFFFFF
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21)
+
+.heading
+  min-width: 780px
+  margin-top: 60px
+  flex-direction: column
+  color: #FFFFFF
+  &__h1
+    font-style: normal
+    font-weight: 900
+    font-size: 60px
+    align-items: center
+    text-align: center
+    text-transform: uppercase
+  &__h2
+    margin-top: 16px
+    font-style: normal
+    font-weight: 400
+    font-size: 18px
+    align-items: center
+    text-align: center
+    color: #FFFFFF
+  &__button
+    margin-top: 116px
+    width: 259px
+    height: 63px
+    background: linear-gradient(0deg, #1EACC7 0%, #4CE2FF 100%)
+    box-shadow: inset 0px -4px 0px rgba(0, 0, 0, 0.12)
+    border-radius: 4px
+    color: #FFFFFF
+
+.h1--small
+  font-style: normal
+  font-weight: 700
+  font-size: 36px
+  align-items: center
+  text-align: center
+  text-transform: uppercase
+  color: #FFFFFF
