--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -2,6 +2,11 @@
   min-height: 800px
   background: url(../img/main_bg.jpg) center center / cover no-repeat
 
+.blackout
+  width: 100%
+  background: #000000
+  mix-blend-mode: normal
+  opacity: 0.6
 .logo
   padding: 0 30px
   &__img
