--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -62,7 +62,7 @@
     align-items: center
     text-align: center
     text-transform: uppercase
-  &__h2
+  &__txt
     margin-top: 16px
     font-style: normal
     font-weight: 400
@@ -78,12 +78,38 @@
     box-shadow: inset 0px -4px 0px rgba(0, 0, 0, 0.12)
     border-radius: 4px
     color: #FFFFFF
+  &__h2
+    font-style: normal
+    font-weight: 700
+    font-size: 36px
+    align-items: center
+    text-align: center
+    text-transform: uppercase
+    color: #FFFFFF
 
-.h1--small
-  font-style: normal
-  font-weight: 700
-  font-size: 36px
-  align-items: center
-  text-align: center
-  text-transform: uppercase
-  color: #FFFFFF
+.label
+
+  &--white
+
+.heading
+
+  &__h2
+
+    &--white
+    &--black
+
+.reasons
+
+.container
+
+.wrapper
+
+.reasons-item
+
+  &__circle
+
+  &__img
+
+  &__txt-heading
+
+  &__txt
