reasons block finished

--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -86,30 +86,62 @@
     text-align: center
     text-transform: uppercase
     color: #FFFFFF
+    &--white
+      font: 'Roboto'
+    &--black
+      margin-top: 50px
+      text-align: center
+      font-weight: 700
+      font-size: 38px
+      align-items: center
+      text-align: center
+      text-transform: uppercase
+      color: #222222
 
 .label
-
   &--white
+    font: 'Roboto'
+  &--black
+    text-align: center
+    width: 115px
+    height: 27px
+    margin: auto
+    margin-top: 60px
+    background: #000000
+    font-weight: 400
+    font-size: 11px
+    line-height: 27px
+    align-items: center
+    text-align: center
+    vertical-align: middle
+    text-transform: uppercase
+    color: #FFFFFF
 
-.heading
-
-  &__h2
-
-    &--white
-    &--black
-
-.reasons
-
-.container
-
-.wrapper
+.cirle-wrapper
+  align-self: center
+  width: 120px
+  height: 120px
+.txt-wrapper
+  padding-left: 30px
 
 .reasons-item
-
+  display: flex
+  margin-top: 50px
   &__circle
-
-  &__img
-
+    display: flex
+    justify-content: center
+    align-self: center
+    width: 116px
+    height: 116px
+    background: #1EACC7
+    border-radius: 50%
   &__txt-heading
-
+    font-weight: 400
+    font-size: 19px
+    align-items: center
+    color: #1EACC7
   &__txt
+    font-weight: 300
+    font-size: 16px
+    align-items: center
+    color: #202020
