mobile app section finished

--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -70,6 +70,13 @@
     align-items: center
     text-align: center
     color: #FFFFFF
+  &__txt-add
+    font-weight: 400
+    font-size: 17px
+    align-items: center
+    text-align: center
+    color: #222222
+    margin-bottom: 30px
   &__button
     margin-top: 116px
     width: 259px
@@ -89,7 +96,7 @@
     &--white
       font: 'Roboto'
     &--black
-      margin-top: 50px
+      margin-top: 30px
       text-align: center
       font-weight: 700
       font-size: 38px
@@ -121,6 +128,7 @@
   align-self: center
   width: 120px
   height: 120px
+
 .txt-wrapper
   padding-left: 30px
 
@@ -145,3 +153,51 @@
     font-size: 16px
     align-items: center
     color: #202020
+
+.mobile-app
+  min-height: 864px
+  background:  url(../img/mobile_app.png) center center / cover no-repeat
+  padding-top: 10px
+  padding-bottom: 40px
+  &__item--1
+    min-height: 320px
+    margin-bottom: 20px
+    background: url(../img/mobile_screen_1.jpg) center center / contain no-repeat
+  &__item--2
+    min-height: 320px
+    margin-bottom: 20px
+    background: url(../img/mobile_screen_2.jpg) center center / contain no-repeat
+  &__item--3
+    min-height: 320px
+    margin-bottom: 20px
+    background: url(../img/mobile_screen_3.jpg) center center / contain no-repeat
+  &__item--4
+    min-height: 320px
+    margin-bottom: 20px
+    background: url(../img/mobile_screen_4.jpg) center center / contain no-repeat
+  &__item--5
+    min-height: 320px
+    margin-bottom: 20px
+    background: url(../img/mobile_screen_5.jpg) center center / contain no-repeat
+  &__item--6
+    min-height: 320px
+    margin-bottom: 20px
+    background: url(../img/mobile_screen_6.jpg) center center / contain no-repeat
+  &__item-txt
+    padding: 80px 50px
+    font-weight: 400
+    font-size: 24px
+    align-items: center
+    text-align: center
+    text-transform: uppercase
+    color: #FFFFFF
+  &__cirle-wrapper
+    padding-bottom: 40px
+
+  &__cirle
+    border-radius: 50%
+    width: 29px
+    height: 29px
+    background: #000000
+  &__cirle-plus
+
