choice section finished

--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -77,6 +77,12 @@
     text-align: center
     color: #222222
     margin-bottom: 30px
+    &--white
+      font-weight: 400
+      font-size: 17px
+      align-items: center
+      text-align: center
+      color: #FFFFFF
   &__button
     margin-top: 116px
     width: 259px
@@ -94,7 +100,13 @@
     text-transform: uppercase
     color: #FFFFFF
     &--white
-      font: 'Roboto'
+      font-weight: 700
+      font-size: 38px
+      line-height: 48px
+      align-items: center
+      text-align: center
+      text-transform: uppercase
+      color: #FFFFFF
     &--black
       margin-top: 30px
       text-align: center
@@ -107,7 +119,19 @@
 
 .label
   &--white
-    font: 'Roboto'
+    margin: 53px auto
+    width: 115px
+    height: 27px
+    background: #FFFFFF
+    text-align: center
+    vertical-align: middle
+    font-weight: 400
+    font-size: 11px
+    line-height: 28px
+    align-items: center
+    text-align: center
+    text-transform: uppercase
+    color: #070716
   &--black
     text-align: center
     width: 115px
@@ -156,7 +180,7 @@
 
 .mobile-app
   min-height: 864px
-  background:  url(../img/mobile_app.png) center center / cover no-repeat
+  background: url(../img/mobile_app.png) center center / cover no-repeat
   padding-top: 10px
   padding-bottom: 40px
   &__item--1
@@ -199,5 +223,21 @@
     width: 29px
     height: 29px
     background: #000000
-  &__cirle-plus
 
+.choice
+  position: relative
+  &__bg-black
+    background-color: #000
+    min-height: 502px
+  &__bg-img
+    background: url(../img/mobile_app.png)
+    min-height: 397px
+  &__auto
+  &__img
+    margin-top: 54px
+  &__txt
+    font-weight: 300
+    font-size: 17px
+    align-items: center
+    text-align: center
+    color: #222222
