--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -100,6 +100,7 @@
     text-transform: uppercase
     color: #FFFFFF
     &--white
+      padding: 26px
       font-weight: 700
       font-size: 38px
       line-height: 48px
@@ -119,19 +120,20 @@
 
 .label
   &--white
-    margin: 53px auto
+    text-align: center
     width: 115px
     height: 27px
+    margin: auto
     background: #FFFFFF
-    text-align: center
-    vertical-align: middle
     font-weight: 400
     font-size: 11px
-    line-height: 28px
+    line-height: 27px
     align-items: center
     text-align: center
+    vertical-align: middle
     text-transform: uppercase
     color: #070716
+    margin-top: 60px
   &--black
     text-align: center
     width: 115px
@@ -242,6 +244,7 @@
     color: #222222
 
 .requirements
+  margin-bottom: 60px
   &__text
     margin-top: 33px
     font-weight: 400
@@ -287,3 +290,34 @@
     font-size: 17px
     align-items: center
     color: #1CA8C3
+
+.world
+  min-height: 716px
+  background: url(../img/map.jpg) center center / cover no-repeat
+  &__item
+    height: 100%
+    padding-top: 1px
+  &__txt
+    height: 100%
+    font-weight: 400
+    font-size: 15px
+    align-items: center
+    text-align: center
+    text-transform: uppercase
+    color: #1FBAD6
+    margin-top: 400px
+// .div-container
+//   display: flex
+//   flex-direction: column
+//   justify-content: space-between
+//   width: 300px
+//   height: 300px
+//   background-color: #14612b
+// .div-a
+//   width: 50px
+//   height: 50px
+//   background-color: red
+// .div-b
+//   width: 60px
+//   height: 40px
+//   background-color: blue
