desktop landing complete

--- a/src/sass/_reset-min.sass
+++ b/src/sass/_reset-min.sass
@@ -13,8 +13,12 @@
 body
   font-family: 'Roboto', sans-serif
 
+a:active,
+a:hover,
+a:visited,
 a
   text-decoration: none
+  color: inherit
 
 img
   max-width: 100%
