--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -22,7 +22,7 @@
   &__wrapper
     display: flex
     flex-direction: column
-    padding: 0px 15px
+    padding: 0 15px
     font-style: normal
     font-weight: 300
     font-size: 12px
@@ -48,7 +48,7 @@
     text-align: center
     text-transform: uppercase
     color: #FFFFFF
-    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21)
+    text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.21)
 
 .heading
   min-width: 780px
@@ -114,7 +114,6 @@
       font-weight: 700
       font-size: 38px
       align-items: center
-      text-align: center
       text-transform: uppercase
       color: #222222
 
@@ -123,34 +122,31 @@
     text-align: center
     width: 115px
     height: 27px
-    margin: auto
     background: #FFFFFF
     font-weight: 400
     font-size: 11px
     line-height: 27px
     align-items: center
-    text-align: center
     vertical-align: middle
     text-transform: uppercase
     color: #070716
-    margin-top: 60px
+    margin: 60px auto 0
+
   &--black
     text-align: center
     width: 115px
     height: 27px
-    margin: auto
-    margin-top: 60px
+    margin: 60px auto auto
     background: #000000
     font-weight: 400
     font-size: 11px
     line-height: 27px
     align-items: center
-    text-align: center
     vertical-align: middle
     text-transform: uppercase
     color: #FFFFFF
 
-.cirle-wrapper
+.circle-wrapper
   align-self: center
   width: 120px
   height: 120px
@@ -217,10 +213,10 @@
     text-align: center
     text-transform: uppercase
     color: #FFFFFF
-  &__cirle-wrapper
+  &__circle-wrapper
     padding-bottom: 40px
 
-  &__cirle
+  &__circle
     border-radius: 50%
     width: 29px
     height: 29px
@@ -306,18 +302,67 @@
     text-transform: uppercase
     color: #1FBAD6
     margin-top: 400px
-// .div-container
-//   display: flex
-//   flex-direction: column
-//   justify-content: space-between
-//   width: 300px
-//   height: 300px
-//   background-color: #14612b
-// .div-a
-//   width: 50px
-//   height: 50px
-//   background-color: red
-// .div-b
-//   width: 60px
-//   height: 40px
-//   background-color: blue
+
+.footer
+  position: relative
+  display: flex
+  justify-content: space-between
+  min-height: 160px
+  width: 100%
+  padding: 20px
+  &__icons
+    display: flex
+    align-items: center
+  &__nav
+    display: flex
+    flex-direction: column
+    align-items: center
+  &__app
+    display: flex
+    align-items: center
+.icon
+  display: flex
+  justify-content: center
+  align-items: center
+  width: 35px
+  height: 35px
+  border-radius: 50%
+  background-color: #070716
+  margin-right: 5px
+  i
+    color: white
+
+.nav-strip
+  width: 301px
+  height: 7px
+  background: #1FBAD6
+.nav-row
+  p
+    display: inline-block
+    text-align: center
+    font-weight: 300
+    font-size: 15px
+    align-items: center
+    text-transform: uppercase
+    color: #070716
+    margin: 20px 0 0 0
+    padding: 0 15px
+  &--small
+    p
+      display: inline-block
+      text-align: center
+      font-weight: 300
+      font-size: 11px
+      align-items: center
+      text-transform: uppercase
+      color: #999999
+      padding: 0 5px
+      margin: 0
+  &--rus
+    font-weight: 400
+    font-size: 11px
+    align-items: center
+    text-align: center
+    text-transform: uppercase
+    color: #1FBAD6
+    margin: 5px 0
