responsive step one

--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -1,3 +1,5 @@
+// ---------------------------------------------- main-info ---------------------------------------------- //
+
 .main-info
   min-height: 800px
   background: url(../img/main_bg.jpg) center center / cover no-repeat
@@ -50,8 +52,8 @@
     color: #FFFFFF
     text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.21)
 
+
 .heading
-  min-width: 780px
   margin-top: 60px
   flex-direction: column
   color: #FFFFFF
@@ -117,6 +119,13 @@
       text-transform: uppercase
       color: #222222
 
+// ---------------------------------------------- reasons ---------------------------------------------- //
+
+.reasons-grid
+  width: 100%
+  display: grid
+  grid-template-columns: 1fr 1fr
+  grid-auto-flow: row;
 .label
   &--white
     text-align: center
@@ -176,6 +185,8 @@
     align-items: center
     color: #202020
 
+// ---------------------------------------------- mobile-app ---------------------------------------------- //
+
 .mobile-app
   min-height: 864px
   background: url(../img/mobile_app.png) center center / cover no-repeat
@@ -222,6 +233,8 @@
     height: 29px
     background: #000000
 
+// ---------------------------------------------- choice ---------------------------------------------- //
+
 .choice
   position: relative
   &__bg-black
@@ -238,6 +251,8 @@
     align-items: center
     text-align: center
     color: #222222
+
+// ---------------------------------------------- requirements ---------------------------------------------- //
 
 .requirements
   margin-bottom: 60px
@@ -286,6 +301,8 @@
     font-size: 17px
     align-items: center
     color: #1CA8C3
+
+// ---------------------------------------------- world ---------------------------------------------- //
 
 .world
   min-height: 716px
