--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -1,20 +1,15 @@
-.navigation
+.nav-bg
   background-color: #333333
-  height: 53px
-
-.nav-menu
-  list-style-type: none
   width: 100%
-  height: 100%
+.navigation
+  height: 53px
 .menu
-  &__item
-    display: flex
-    padding: 0 40px
-    border-right: 2px dotted black
-    &:last-child
-      border-right: 0
   &__link
     color: #FFFFFF
     font-style: normal
     font-weight: 300
     font-size: 15px
+    padding: 0 40px
+    border-right: 2px dotted black
+    &:last-child
+      border-right: 0
