--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -52,7 +52,6 @@
     color: #FFFFFF
     text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.21)
 
-
 .heading
   margin-top: 60px
   flex-direction: column
@@ -124,8 +123,10 @@
 .reasons-grid
   width: 100%
   display: grid
-  grid-template-columns: 1fr 1fr
-  grid-auto-flow: row;
+  grid-gap: 10px
+  grid-column-gap: 35px
+  grid-template-columns: repeat(auto-fit, minmax(450px, 1fr))
+  grid-auto-rows: 350px
 .label
   &--white
     text-align: center
@@ -156,7 +157,7 @@
     color: #FFFFFF
 
 .circle-wrapper
-  align-self: center
+  // align-self: center
   width: 120px
   height: 120px
 
@@ -186,6 +187,13 @@
     color: #202020
 
 // ---------------------------------------------- mobile-app ---------------------------------------------- //
+
+.mobile-app-grid
+  width: 100%
+  display: grid
+  grid-gap: 6px
+  grid-template-columns: repeat(auto-fit, minmax(321px, 1fr))
+  grid-auto-rows: 375px
 
 .mobile-app
   min-height: 864px
@@ -253,6 +261,12 @@
     color: #222222
 
 // ---------------------------------------------- requirements ---------------------------------------------- //
+.requirments-grid
+  width: 100%
+  display: grid
+  grid-gap: 15px
+  grid-template-columns: repeat(auto-fit, minmax(551px, 1fr))
+  grid-auto-rows: minmax(150, 1fr)
 
 .requirements
   margin-bottom: 60px
@@ -263,7 +277,6 @@
     align-items: center
     color: #1CA8C3
     &--red
-      margin-top: 50px
       color: #FF5656
       font-weight: 400
       font-size: 22px
@@ -320,10 +333,14 @@
     color: #1FBAD6
     margin-top: 400px
 
+// ---------------------------------------------- footer ---------------------------------------------- //
+
+
 .footer
   position: relative
   display: flex
   justify-content: space-between
+  flex-wrap: wrap
   min-height: 160px
   width: 100%
   padding: 20px
@@ -334,6 +351,7 @@
     display: flex
     flex-direction: column
     align-items: center
+    min-width: 380px
   &__app
     display: flex
     align-items: center
