--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -27,7 +27,6 @@
   .req-wrapper
     margin-left: 30%
 
-
 // =========================================== 1200 =========================================== //
 @media (max-width: 1199px)
   .requirements
@@ -38,10 +37,67 @@
       justify-content: flex-start
 
   .mt40
-      margin-top: -150px
+    margin-top: -150px
   .req-wrapper
     margin-left: 10%
+  .footer-grid
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
 
+// =========================================== 1100 =========================================== //
+// @media ( max-width: 1100px )
+//   .row
+//     height: 53px
+//   .nav-bg
+//     display: flex
+//     align-items: center
+//     background-color: #333333
+//     width: 100%
+//     display: block
+//   .nav-burger
+//     width: 100%
+//     &__line
+//       display: block
+//       margin-left: auto
+//       height: 5px
+//       width: 45px
+//       background-color: #fff
+//       transition: 0.8s all
+//     &__line:nth-child(2)
+//       background-color: #fff
+//       margin-top: 7px
+//       margin-bottom: 7px
+//       // активизация меню
+//     &--active
+//       span:nth-child(1)
+//         display: none
+//         transform: rotate(45deg)
+//       span:nth-child(2)
+//         margin-bottom: -5px
+//         margin-top: 0px
+//         transform: rotate(-45deg)
+//       span:nth-child(3)
+//         transform: rotate(45deg)
+//   .menu
+//     &__link
+//       border-right: none
+//       font-size: clamp(1rem, 2.5vw, 6vw)
+//       padding: 10px
+//   .navigation
+//     flex-direction: column
+//     position: fixed
+//     background-color: rgba(0, 0, 0, 0.91)
+//     text-transform: uppercase
+//     color: #1EACC7
+//     width: 50%
+//     height: 100vh
+//     top: 0
+//     left: -100%
+//     transition: .2s all
+//     &__active
+//       left: 0
 
 // =========================================== 768 =========================================== //
 
@@ -96,4 +152,3 @@
   .world
     &__txt
       margin-top: auto
-
