--- a/src/sass/_reset-min.sass
+++ b/src/sass/_reset-min.sass
@@ -15,11 +15,10 @@ body
 
 a:active,
 a:hover,
-a:visited,
 a
   text-decoration: none
   color: inherit
 
-img
-  max-width: 100%
-  height: auto
+// img
+//   max-width: 100%
+//   height: auto
