--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -1,7 +1,7 @@
-.nav-bg
+.navigation-bg
   background-color: #333333
   width: 100%
-.navigation
+.navigation-menu
   height: 53px
 .menu
   &__link
@@ -13,3 +13,16 @@
     border-right: 2px dotted black
     &:last-child
       border-right: 0
+  &__burger
+    color: #ffffff
+    font-size: 30px
+    // display: none
+.menu-bar
+  width: 25px
+  height: 20px
+  margin: 30px 0 20px 20px
+  cursor: pointer
+  background-color: rgb(150, 219, 21)
+  text-align: center
+.flex-menu
+  display: flex
