--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -1,4 +1,6 @@
-// ---------------------------------------------- main-info ---------------------------------------------- //
+/* -------------------------------------------------------------------------- */
+/*                           section ///[main-info]                           */
+/* -------------------------------------------------------------------------- */
 
 .main-info
   min-height: 800px
@@ -85,7 +87,7 @@
       text-align: center
       color: #FFFFFF
   &__button
-    margin-top: 116px
+    margin: 25px auto
     width: 259px
     height: 63px
     background: linear-gradient(0deg, #1EACC7 0%, #4CE2FF 100%)
@@ -118,7 +120,9 @@
       text-transform: uppercase
       color: #222222
 
-// ---------------------------------------------- reasons ---------------------------------------------- //
+/* -------------------------------------------------------------------------- */
+/*                            section ///[reasons]                            */
+/* -------------------------------------------------------------------------- */
 
 .reasons-grid
   width: 100%
@@ -186,7 +190,9 @@
     align-items: center
     color: #202020
 
-// ---------------------------------------------- mobile-app ---------------------------------------------- //
+/* -------------------------------------------------------------------------- */
+/*                           section ///[mobile-app]                          */
+/* -------------------------------------------------------------------------- */
 
 .mobile-app-grid
   width: 100%
@@ -241,7 +247,9 @@
     height: 29px
     background: #000000
 
-// ---------------------------------------------- choice ---------------------------------------------- //
+/* -------------------------------------------------------------------------- */
+/*                             section ///[choice]                            */
+/* -------------------------------------------------------------------------- */
 
 .choice
   position: relative
@@ -262,13 +270,15 @@
     text-align: center
     color: #222222
 
-// ---------------------------------------------- requirements ---------------------------------------------- //
+/* -------------------------------------------------------------------------- */
+/*                          section ///[requirements]                         */
+/* -------------------------------------------------------------------------- */
 .requirments-grid
   width: 100%
   display: grid
   grid-gap: 15px
   grid-template-columns: repeat(auto-fit, minmax(551px, 1fr))
-  grid-auto-rows: minmax(150, 1fr)
+  grid-auto-rows: minmax(150px, 1fr)
 
 .requirements
   margin-bottom: 60px
@@ -317,7 +327,9 @@
     align-items: center
     color: #1CA8C3
 
-// ---------------------------------------------- world ---------------------------------------------- //
+/* -------------------------------------------------------------------------- */
+/*                             section ///[world]                             */
+/* -------------------------------------------------------------------------- */
 
 .world
   min-height: 716px
@@ -335,7 +347,9 @@
     color: #1FBAD6
     margin-top: 400px
 
-// ---------------------------------------------- footer ---------------------------------------------- //
+/* -------------------------------------------------------------------------- */
+/*                             section ///[footer]                            */
+/* -------------------------------------------------------------------------- */
 
 .footer
   &__icons
@@ -363,7 +377,7 @@
   display: grid
   grid-gap: 15px
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr))
-  grid-auto-rows: minmax(50, 1fr)
+  grid-auto-rows: minmax(50px, 1fr)
 
 .icon
   display: flex
