--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -1,9 +1,12 @@
 .navigation-bg
+  // position: relative
   background-color: #333333
   width: 100%
-.navigation-menu
-  height: 53px
 .menu
+  display: flex
+  justify-content: center
+  align-items: center
+  height: 53px
   &__link
     color: #FFFFFF
     font-style: normal
@@ -13,16 +16,14 @@
     border-right: 2px dotted black
     &:last-child
       border-right: 0
-  &__burger
-    color: #ffffff
-    font-size: 30px
-    // display: none
-.menu-bar
-  width: 25px
-  height: 20px
-  margin: 30px 0 20px 20px
-  cursor: pointer
-  background-color: rgb(150, 219, 21)
-  text-align: center
-.flex-menu
-  display: flex
+  &__link:hover
+    color: #4CE2FF
+
+.menu-wrapper
+  opacity: 0
+  position: absolute
+  top: 0px
+  left: 0px
+
+.menu-btn
+  display: none
