--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -7,7 +7,6 @@
 /* -------------------------------------------------------------------------- */
 /*                              section ///[1400]                             */
 /* -------------------------------------------------------------------------- */
-
 @media (max-width: 1399px)
   .menu
     &__link
@@ -21,7 +20,6 @@
 @media (max-width: 991px)
   .heading
     margin-top: 20px
-
   .menu
     &__link
       padding: 0 20px
@@ -54,13 +52,91 @@
 /*                              section ///[1100]                             */
 /* -------------------------------------------------------------------------- */
 @media ( max-width: 1100px )
-  .menu
-    display: flex
+
+  //absolute container
+  .menu-wrapper
+    opacity: 1
+    position: absolute
+    z-index: 99
+    top: 0px
+    left: 0px
+
+  //burger menu
+  .nav-icon
+    display: block
+    position: relative
+    background: #e4e4e4
+    width: 40px
+    height: 4px
+    top: 13px
+    // transition: background .3s ease-out
+    cursor: pointer
+  .nav-icon:before
+    content: ''
+    display: block
+    position: absolute
+    transition: background .3s ease-out
+    background: #e4e4e4
+    width: 40px
+    height: 4px
+    top: 7px
+  .nav-icon:after
+    content: ''
+    display: block
+    position: absolute
+    transition: background .3s ease-out
+    background: #e4e4e4
+    width: 40px
+    height: 4px
+    top: -7px
+
+  //label for menu
+  .menu-icon
+    cursor: pointer
+
+  //pop-up menu
+  .menu-btn:checked ~ .menu
+    //rendering
+    opacity: 1
+    background-color: rgba(51, 51, 51, 0.748)
+    backdrop-filter: blur(15px)
+    transition: 0.5s all
+    // text
     flex-direction: column
-    background-color: #ac2929cc
+    justify-content: center
+    align-items: center
+    height: 50vh
+    font-size: 45px
+    text-transform: uppercase
+    // positioning
+    top: 0
+
+  .menu-btn:checked ~ .nav-icon
+    opacity: 0
+
+  // .menu-btn:checked ~ .nav-icon:before
+  //   transform: rotate(45deg)
+
+  // .menu-btn:checked ~ .nav-icon:after
+  //   transform: rotate(-45deg)
+
+  //pop-up menu unchecked
+  .menu
+    opacity: 0
+    position: absolute
+    top: -100px
+    left: 0
+    width: 100%
     &__link
       border: 0
-      opacity: 0
+      padding: 20px
+      font-size: 1.5rem
+
+  .secondary-nav
+    background-color: #333333
+    height: 53px
+    width: 100%
+
   .footer
     &__icons
       padding-left: 0
@@ -70,7 +146,6 @@
 /* -------------------------------------------------------------------------- */
 /*                              section ///[768]                              */
 /* -------------------------------------------------------------------------- */
-
 @media (max-width: 767px)
   .heading
     margin-top: 20px
@@ -81,7 +156,6 @@
   .menu
     &__link
       text-align: center
-      padding: 0 10px
   .logo
     flex-direction: column
     justify-content: center
@@ -109,7 +183,6 @@
 /* -------------------------------------------------------------------------- */
 /*                              section ///[576]                              */
 /* -------------------------------------------------------------------------- */
-
 @media (max-width: 575px)
   .logo
     &__wrapper
