--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -12,6 +12,10 @@
     &__link
       padding: 0 20px
       text-align: center
+  .requirments-grid
+    display: block
+
+
 @media (max-width: 1199px)
   .menu
     &__link
