--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -15,26 +15,14 @@
   .requirments-grid
     display: block
 
-
-@media (max-width: 1199px)
-  .menu
-    &__link
-      padding: 0 20px
-      text-align: center
-@media (max-width: 991px)
-  .heading
-    margin-top: 20px
-  .menu
-    &__link
-      padding: 0 20px
-      text-align: center
-  .req-wrapper
-    margin-left: 30%
-
 /* -------------------------------------------------------------------------- */
 /*                              section ///[1200]                             */
 /* -------------------------------------------------------------------------- */
 @media (max-width: 1199px)
+  .menu
+    &__link
+      padding: 0 20px
+      text-align: center
   .requirements
     &__item
       display: flex
@@ -150,6 +138,20 @@
       padding-right: 0
 
 /* -------------------------------------------------------------------------- */
+/*                              section ///[991]                              */
+/* -------------------------------------------------------------------------- */
+@media (max-width: 991px)
+  .heading
+    margin-top: 20px
+  .menu
+    &__link
+      padding: 0 20px
+      text-align: center
+  .req-wrapper
+    margin-left: 30%
+
+
+/* -------------------------------------------------------------------------- */
 /*                              section ///[768]                              */
 /* -------------------------------------------------------------------------- */
 @media (max-width: 767px)
@@ -185,6 +187,8 @@
   .world
     &__txt
       margin-top: auto
+  .reasons-grid
+    display: block
 
 /* -------------------------------------------------------------------------- */
 /*                              section ///[576]                              */
