--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -149,7 +149,8 @@
       text-align: center
   .req-wrapper
     margin-left: 30%
-
+  .reasons-grid
+    display: block
 
 /* -------------------------------------------------------------------------- */
 /*                              section ///[768]                              */
@@ -187,8 +188,7 @@
   .world
     &__txt
       margin-top: auto
-  .reasons-grid
-    display: block
+
 
 /* -------------------------------------------------------------------------- */
 /*                              section ///[576]                              */
@@ -201,6 +201,9 @@
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr))
   .req-wrapper
     margin-left: 0%
+  .reasons-item
+    flex-wrap: wrap
+    justify-content: center
   .world
     &__txt
       margin-top: auto
