finish exept burger menu

--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -143,6 +143,8 @@
 @media (max-width: 991px)
   .heading
     margin-top: 20px
+    &__txt
+      text-align: justify
   .menu
     &__link
       padding: 0 20px
@@ -204,6 +206,10 @@
   .reasons-item
     flex-wrap: wrap
     justify-content: center
+    &__txt-heading
+      text-align: center
+    &__txt
+      text-align: justify
   .world
     &__txt
       margin-top: auto
