--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -188,6 +188,7 @@
     font-weight: 300
     font-size: 16px
     align-items: center
+    text-align: justify
     color: #202020
 
 /* -------------------------------------------------------------------------- */
